# gpu-mr

./: CMakeLists.txt  Makefile  README.md  apache-arrow-apt-source-latest-jammy.deb  main.cu  test.cpp  test.csv
engine/: cuda_func.cpp  cuda_func.h  engine.cu  engine.h
